--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.2.2",
     "install": "^0.13.0",
     "node-sass": "^8.0.0",
     "normalize.css": "^8.0.1",
